--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+.p-3{
+    padding: 3rem;
+    background: black;
+    height: 100vh;
+    width: 100%;
+}
+
 table tr td{
     vertical-align: middle;
 }
@@ -12,7 +19,7 @@ td button i{
 
 
 .modal-header{
-    background: grey;
+    background: tomato;
     color: black;
 }
 
@@ -112,24 +119,44 @@ form .inputField > div input{
 .inputField div {
     margin-bottom: 1rem;
 }
-body {
-    background-color: #808080; /* Grey background color */
-    color: black; /* White text color */
-}
+
 
 .newUser {
-    background-color: #000; /* Black button color */
-}
-
-.p-3 {
-    padding: 3rem;
-}
-th {
-    color: #fff;
-}
-td {
+    background-color: tomato; /* Black button color */
+    border: 0px;
+    border-radius: 4px;
+    width: 200px;
+    padding: 10px;
     color: white;
 }
+.newUser:hover{
+    background: #d43030c2;
+    transition: 0.4s;
+    
+
+}
+
+th {
+    color: #000000;
+    
+}
+td {
+    color: #000000;
+}
 tr {
-    background-color: #000;
+    background-color: #fff;
+}
+
+
+.back button{
+    background-color: tomato;
+    color: white;
+    padding: 10px;
+    width: 150px;
+    border-radius: 4px;
+    border: 0px;
+}
+.back button:hover{
+    background: #d43030c2;
+    transition: 0.4s;
 }
